--- a/packages/client/src/global-styles/styles/link.scss
+++ b/packages/client/src/global-styles/styles/link.scss
@@ -1,4 +1,7 @@
 .link {
+    background-color: transparent;
+    appearance: none;
+    border: none;
     color: var(--color-bluish-green);
 
     &:link{
