Added Bought Products Page
Basic layout for user to browse trought his orders

--- a/packages/client/src/global-styles/styles/utils.scss
+++ b/packages/client/src/global-styles/styles/utils.scss
@@ -3,6 +3,10 @@
     display: flex;
 }
 
+.util-flex-row{
+    flex-direction: row;
+}
+
 .util-flex-column{
     flex-direction: column;
 }
@@ -17,6 +21,10 @@
 
 .util-center-second-axis{
     align-items: center;
+}
+
+.util-flex-grow{
+    flex-grow: 1;
 }
 
 
