New Input and CreatOffertPage
Added input for numbers with validation

--- a/packages/client/src/globalCompontents/NormalizedInput/NormalizedInput.scss
+++ b/packages/client/src/globalCompontents/NormalizedInput/NormalizedInput.scss
@@ -17,12 +17,17 @@
 
         &:focus {
             outline: none;
-            border: 2px solid var(--color-accent)
+            border: 2px solid var(--color-accent);
         }
 
         &:hover {
             outline: none;
-            border: 2px solid var(--color-accent)
+            border: 2px solid var(--color-accent);
+        }
+
+        &:invalid{
+            outline:none;
+            border: 2px solid red;
         }
     }
 
