--- a/packages/client/src/globalCompontents/NavarGlobalComponent/NavbarGlobalComponent.scss
+++ b/packages/client/src/globalCompontents/NavarGlobalComponent/NavbarGlobalComponent.scss
@@ -97,7 +97,6 @@
     bottom: 0;
     right: 0;
     width: 18rem;
-    height: 24rem;
     padding: 1rem;
     box-sizing: border-box;
     background-color: white;
@@ -105,6 +104,22 @@
     flex-direction: column;
     border: 1px solid var(--color-accent);
     transform: translateY(calc(100% + .5rem));
+
+    &__loged {
+        height: 24rem;
+    }
+
+    &__not-logged {
+        height: 10rem;
+        
+        & > *{
+            margin: .3rem 0;
+        }
+
+        & > *:not(:last-child){
+            border-bottom: 1px solid var(--color-accent);
+        }
+    }
 }
 
 .user-menu {
