--- a/packages/client/src/global-styles/styles/buttons.scss
+++ b/packages/client/src/global-styles/styles/buttons.scss
@@ -10,6 +10,10 @@
     text-transform: uppercase;
     letter-spacing: .2rem;
 
+    &:disabled{
+        background: #444;
+    }
+
     &:hover {
         filter: brightness(1.2);
     }
