Fix | Feat: filtering | docker-compose redis

--- a/packages/client/src/global-styles/styles/root.scss
+++ b/packages/client/src/global-styles/styles/root.scss
@@ -1,9 +1,9 @@
 :root {
-    --color-primary: #ff5a00;
+    --color-primary: #1463F3;
     --color-secondary: #eceff1;
     --color-accent: #aaaaaa;
 
-    --color-white: #fff;
+    --color-white: #CCD0D8;
     --color-body: #808080;
     --color-on-surface: #000;
     --color-black: #22232E;
