feat: media queries containers/offerts/navbar

--- a/packages/client/src/modules/SearchModule/pages/SearchPage/SearchPage.scss
+++ b/packages/client/src/modules/SearchModule/pages/SearchPage/SearchPage.scss
@@ -1,11 +1,16 @@
 .search-header {
     font-size: 1.6rem;
     font-weight: 600;
-    color:black;
+    color: black;
 }
 
-.search-box{
+.search-box {
     display: grid;
     gap: 1rem;
     grid-template-columns: auto 1fr;
+
+
+    @media (max-width: 1200px) {
+        grid-template-columns: 1fr;
+    }
 }
