--- a/packages/client/src/global-styles/styles/containers.scss
+++ b/packages/client/src/global-styles/styles/containers.scss
@@ -5,6 +5,12 @@
     border: 1px solid var(--color-accent);
     gap: 1rem;
     padding: 2rem;
+    @media (max-width: 1200px) {
+        padding: 1rem;
+    }
+    @media (max-width: 768px) {
+        padding: .6rem;
+    }
 }
 
 .content {
@@ -14,10 +20,19 @@
 
     &-wide {
         padding: 2rem 5rem;
+        @media (max-width: 768px) {
+            padding: 2rem 1rem;
+        }
     }
 
     &-narrow {
         padding: 2rem 20rem;
+        @media (max-width: 1200px) {
+            padding: 2rem 8rem;
+        }
+        @media (max-width: 768px) {
+            padding: 2rem 2rem;
+        }
     }
 }
 
