--- a/packages/client/src/global-styles/styles/utils.scss
+++ b/packages/client/src/global-styles/styles/utils.scss
@@ -19,6 +19,10 @@
     justify-content: space-between;
 }
 
+.util-self-center-main-axis {
+    justify-self: center;
+}
+
 .util-self-end-main-axis {
     align-self: flex-end;
 }
