--- a/packages/client/src/globalCompontents/NavarGlobalComponent/NavbarGlobalComponent.scss
+++ b/packages/client/src/globalCompontents/NavarGlobalComponent/NavbarGlobalComponent.scss
@@ -8,11 +8,12 @@
 }
 
 .navbar__list {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-template-rows: 1fr auto;
     list-style-type: none;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 
     &-logo {
         display: flex;
@@ -28,9 +29,15 @@
 
     &-li-form {
         flex: 1;
+        @media (max-width: 768px) {
+            grid-row-start: 2;
+            grid-column: 1 / -1;
+        }
+    
     }
 
     &-menu {
+        grid-column: 3;
         position: relative;
 
         &-button {
