--- a/packages/client/src/modules/BoughtProductsModule/pages/BoughtProductsPage/BoughtProductCard.scss
+++ b/packages/client/src/modules/BoughtProductsModule/pages/BoughtProductsPage/BoughtProductCard.scss
@@ -8,6 +8,7 @@
 
 .bought-product-card {
     gap: 1px;
+    box-sizing: border-box;
 
     &>* {
         border-bottom: 1px solid var(--color-accent);
