--- a/packages/client/src/modules/SearchModule/components/OffertTab/OffertTab.scss
+++ b/packages/client/src/modules/SearchModule/components/OffertTab/OffertTab.scss
@@ -2,6 +2,7 @@
     display: flex;
     padding: .6rem 0;
     border-bottom: 1px solid var(--color-accent);
+    box-sizing: border-box;
 
     &-details{
         line-height: 1.3rem;
