--- a/packages/client/src/modules/LoginModule/pages/LoginPage/LoginPage.scss
+++ b/packages/client/src/modules/LoginModule/pages/LoginPage/LoginPage.scss
@@ -1,11 +1,18 @@
 .login-container{
-    padding: 4rem 14rem 0rem 14rem;
+    padding: 4rem 12rem 0rem 12rem;
+
+    @media (max-width: 768px){
+        padding: 4rem 4rem 0rem 4rem;
+    }
 }
 
 .login__grid {
     display: grid;
     gap: 10px;
     grid-template-columns: 1fr 1fr;
+    @media (max-width: 1200px){
+        grid-template-columns: 1fr;
+    }
 }
 
 .login__box {
@@ -18,6 +25,9 @@
 
     &-fill {
         grid-row: span 2;
+        @media (max-width: 1200px){
+            display:none;
+        }
     }
 }
 
