--- a/packages/client/src/global-styles/styles/buttons.scss
+++ b/packages/client/src/global-styles/styles/buttons.scss
@@ -2,6 +2,7 @@
     appearance: none;
     border: 1px solid var(--color-accent);
     background-color: var(--color-primary);
+    white-space: nowrap;
     color: white;
     font-weight: 100;
     font-size: 1rem;
