--- a/packages/client/src/modules/SettingsModule/pages/SettingsPage/SettingsPage.scss
+++ b/packages/client/src/modules/SettingsModule/pages/SettingsPage/SettingsPage.scss
@@ -3,6 +3,16 @@
     grid-template-columns: 1fr 1fr;
 }
 
+.balance-box{
+    display: grid !important;
+    grid-template-columns: 1fr 1fr;
+
+    @media (max-width: 1000px) {
+        justify-items: center;
+        grid-template-columns: 1fr;
+    }
+}
+
 .settings-section {
     line-height: 1.6rem;
     font-size: 1.2rem;
@@ -27,4 +37,14 @@
 .settings-box{
     display: grid !important;
     grid-template-columns: auto 1fr;
+}
+
+.settings-modals{
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 1rem;
+
+    @media (max-width: 1000px) {
+        grid-template-columns: auto;
+    }
 }
